--- a/src/components/Company/company.scss
+++ b/src/components/Company/company.scss
@@ -2,6 +2,7 @@
 
 .company {
   display: flex;
+  height: auto;
   position: relative;
   margin-top: 3%;
 
@@ -144,5 +145,6 @@
       }
     }
   }
+
 }
 
